// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionScreenTemplate renders correctly with en-US locale 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            {
              "alignItems": undefined,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-around",
                "marginTop": 30,
              },
              {
                "width": 0,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 30,
                  },
                ]
              }
            >
              asleep at
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_semibold",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 30,
                    },
                  ]
                }
              >
                11:00
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_regular",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 22,
                    },
                  ]
                }
              >
                pm
              </Text>
            </View>
          </View>
          <RNSVGSvgView
            bbHeight={90}
            bbWidth={90}
            focusable={false}
            height={90}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 90,
                  "width": 90,
                },
              ]
            }
            width={90}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M2.7554552980815448e-15,-45A45,45,0,1,1,-2.7554552980815448e-15,45A45,45,0,1,1,2.7554552980815448e-15,-45M-7.898971854500428e-15,-43A43,43,0,1,0,7.898971854500428e-15,43A43,43,0,1,0,-7.898971854500428e-15,-43Z"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                matrix={
                  [
                    1,
                    0,
                    0,
                    1,
                    45,
                    45,
                  ]
                }
                propList={
                  [
                    "stroke",
                  ]
                }
                stroke={
                  {
                    "payload": 6684672,
                    "type": 0,
                  }
                }
              />
              <RNSVGText
                alignmentBaseline="middle"
                content={null}
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278255590,
                    "type": 0,
                  }
                }
                font={
                  {
                    "fontSize": 50,
                    "textAnchor": "middle",
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
                rotate={[]}
                x={
                  [
                    45,
                  ]
                }
                y={
                  [
                    45,
                  ]
                }
              >
                <RNSVGTSpan
                  content="75"
                  dx={[]}
                  dy={[]}
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  font={{}}
                  rotate={[]}
                  x={[]}
                  y={[]}
                />
              </RNSVGText>
              <RNSVGPath
                d="M2.7554552980815448e-15,-45A45,45,0,1,1,-45,5.5109105961630896e-15L-43,5.2659812363336185e-15A43,43,0,1,0,2.6329906181668092e-15,-43Z"
                fill={
                  {
                    "payload": 4278255590,
                    "type": 0,
                  }
                }
                matrix={
                  [
                    1,
                    0,
                    0,
                    1,
                    45,
                    45,
                  ]
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 30,
                  },
                ]
              }
            >
              awake at
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_semibold",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 30,
                    },
                  ]
                }
              >
                7:30
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_regular",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 22,
                    },
                  ]
                }
              >
                am
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "flexDirection": "row",
              },
              {
                "width": 0,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "transparent",
                "borderRadius": 28,
                "height": 56,
                "margin": 6,
                "marginLeft": 30,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "width": 56,
              }
            }
            testID="icon-button-container-outer-layer"
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "transparent",
                  "borderColor": "rgba(121, 116, 126, 1)",
                  "borderRadius": 28,
                  "borderWidth": 0,
                  "elevation": 0,
                  "flex": 1,
                  "overflow": "hidden",
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="icon-button-container"
            >
              <View
                accessibilityComponentType="button"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityTraits="button"
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                centered={true}
                collapsable={false}
                focusable={true}
                hitSlop={
                  {
                    "bottom": 6,
                    "left": 6,
                    "right": 6,
                    "top": 6,
                  }
                }
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    [
                      {
                        "alignItems": "center",
                        "flexGrow": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                testID="icon-button"
              >
                <Text />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          />
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "transparent",
                "borderRadius": 28,
                "height": 56,
                "margin": 6,
                "marginRight": 30,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "width": 56,
              }
            }
            testID="icon-button-container-outer-layer"
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "transparent",
                  "borderColor": "rgba(121, 116, 126, 1)",
                  "borderRadius": 28,
                  "borderWidth": 0,
                  "elevation": 0,
                  "flex": 1,
                  "overflow": "hidden",
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="icon-button-container"
            >
              <View
                accessibilityComponentType="button"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityTraits="button"
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                centered={true}
                collapsable={false}
                focusable={true}
                hitSlop={
                  {
                    "bottom": 6,
                    "left": 6,
                    "right": 6,
                    "top": 6,
                  }
                }
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    [
                      {
                        "alignItems": "center",
                        "flexGrow": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                testID="icon-button"
              >
                <Text />
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 5,
                "marginLeft": 30,
                "marginRight": 30,
              },
            ]
          }
        >
          <View
            style={
              {
                "position": "absolute",
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-around",
              },
              {
                "width": 0,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 30,
                  },
                ]
              }
            >
              sleep time
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_semibold",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 30,
                    },
                  ]
                }
              >
                8h 30m
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 30,
                  },
                ]
              }
            >
              REM time
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_semibold",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 30,
                    },
                  ]
                }
              >
                1h 45m
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 30,
                  },
                ]
              }
            >
              deep time
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_semibold",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 30,
                    },
                  ]
                }
              >
                 45m
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`SessionScreenTemplate renders correctly with ja-JP locale 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            {
              "alignItems": undefined,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-around",
                "marginTop": 30,
              },
              {
                "width": 0,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 30,
                  },
                ]
              }
            >
              入眠
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_semibold",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 30,
                    },
                  ]
                }
              >
                11:00
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_regular",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 22,
                    },
                  ]
                }
              >
                pm
              </Text>
            </View>
          </View>
          <RNSVGSvgView
            bbHeight={90}
            bbWidth={90}
            focusable={false}
            height={90}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 90,
                  "width": 90,
                },
              ]
            }
            width={90}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M2.7554552980815448e-15,-45A45,45,0,1,1,-2.7554552980815448e-15,45A45,45,0,1,1,2.7554552980815448e-15,-45M-7.898971854500428e-15,-43A43,43,0,1,0,7.898971854500428e-15,43A43,43,0,1,0,-7.898971854500428e-15,-43Z"
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                matrix={
                  [
                    1,
                    0,
                    0,
                    1,
                    45,
                    45,
                  ]
                }
                propList={
                  [
                    "stroke",
                  ]
                }
                stroke={
                  {
                    "payload": 6684672,
                    "type": 0,
                  }
                }
              />
              <RNSVGText
                alignmentBaseline="middle"
                content={null}
                dx={[]}
                dy={[]}
                fill={
                  {
                    "payload": 4278255590,
                    "type": 0,
                  }
                }
                font={
                  {
                    "fontSize": 50,
                    "textAnchor": "middle",
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
                rotate={[]}
                x={
                  [
                    45,
                  ]
                }
                y={
                  [
                    45,
                  ]
                }
              >
                <RNSVGTSpan
                  content="75"
                  dx={[]}
                  dy={[]}
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  font={{}}
                  rotate={[]}
                  x={[]}
                  y={[]}
                />
              </RNSVGText>
              <RNSVGPath
                d="M2.7554552980815448e-15,-45A45,45,0,1,1,-45,5.5109105961630896e-15L-43,5.2659812363336185e-15A43,43,0,1,0,2.6329906181668092e-15,-43Z"
                fill={
                  {
                    "payload": 4278255590,
                    "type": 0,
                  }
                }
                matrix={
                  [
                    1,
                    0,
                    0,
                    1,
                    45,
                    45,
                  ]
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 30,
                  },
                ]
              }
            >
              起床
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_semibold",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 30,
                    },
                  ]
                }
              >
                7:30
              </Text>
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_regular",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 22,
                    },
                  ]
                }
              >
                am
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
                "flexDirection": "row",
              },
              {
                "width": 0,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "transparent",
                "borderRadius": 28,
                "height": 56,
                "margin": 6,
                "marginLeft": 30,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "width": 56,
              }
            }
            testID="icon-button-container-outer-layer"
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "transparent",
                  "borderColor": "rgba(121, 116, 126, 1)",
                  "borderRadius": 28,
                  "borderWidth": 0,
                  "elevation": 0,
                  "flex": 1,
                  "overflow": "hidden",
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="icon-button-container"
            >
              <View
                accessibilityComponentType="button"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityTraits="button"
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                centered={true}
                collapsable={false}
                focusable={true}
                hitSlop={
                  {
                    "bottom": 6,
                    "left": 6,
                    "right": 6,
                    "top": 6,
                  }
                }
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    [
                      {
                        "alignItems": "center",
                        "flexGrow": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                testID="icon-button"
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#ffffff",
                        "fontSize": 40,
                      },
                      [
                        {
                          "lineHeight": 40,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰅁
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "flex": 1,
              }
            }
          />
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "transparent",
                "borderRadius": 28,
                "height": 56,
                "margin": 6,
                "marginRight": 30,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "width": 56,
              }
            }
            testID="icon-button-container-outer-layer"
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "transparent",
                  "borderColor": "rgba(121, 116, 126, 1)",
                  "borderRadius": 28,
                  "borderWidth": 0,
                  "elevation": 0,
                  "flex": 1,
                  "overflow": "hidden",
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="icon-button-container"
            >
              <View
                accessibilityComponentType="button"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityTraits="button"
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                centered={true}
                collapsable={false}
                focusable={true}
                hitSlop={
                  {
                    "bottom": 6,
                    "left": 6,
                    "right": 6,
                    "top": 6,
                  }
                }
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    [
                      {
                        "alignItems": "center",
                        "flexGrow": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                testID="icon-button"
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#ffffff",
                        "fontSize": 40,
                      },
                      [
                        {
                          "lineHeight": 40,
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                        },
                        {
                          "backgroundColor": "transparent",
                        },
                      ],
                      {
                        "fontFamily": "material-community",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  󰅂
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 5,
                "marginLeft": 30,
                "marginRight": 30,
              },
            ]
          }
        >
          <View
            style={
              {
                "position": "absolute",
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "alignItems": "flex-start",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "space-around",
              },
              {
                "width": 0,
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 30,
                  },
                ]
              }
            >
              睡眠時間
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_semibold",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 30,
                    },
                  ]
                }
              >
                8h 30m
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 30,
                  },
                ]
              }
            >
              REM睡眠
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_semibold",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 30,
                    },
                  ]
                }
              >
                1h 45m
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 30,
                  },
                ]
              }
            >
              深い眠り
            </Text>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "calibre_app_semibold",
                      "fontSize": 20,
                    },
                    {
                      "color": "rgba(98, 91, 113, 1)",
                    },
                    {
                      "fontSize": 30,
                    },
                  ]
                }
              >
                 45m
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
